src/objects/Approver_History__c.object
<CustomObject>
    <description>Used for approver performance management
Collect records from two objects: ProcessInstanceStep and ProcessInstanceWorkItem</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approver History</relationshipLabel>
        <relationshipName>Approver_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actor_Username__c</fullName>
        <description>Username of User who approved or submitted a approval</description>
        <label>Actor Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Approver History</relationshipLabel>
        <relationshipName>Approver_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Name__c</fullName>
        <label>Approval Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_URL__c</fullName>
        <formula>&quot;https://nxp.my.salesforce.com/&quot;+ Target_Object_ID__c</formula>
        <label>Approval URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Action_Date__c</fullName>
        <label>Approver Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Group__c</fullName>
        <label>Approver Group</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMD Request</label>
        <referenceTo>CMD_Request__c</referenceTo>
        <relationshipLabel>Approver History</relationshipLabel>
        <relationshipName>Approver_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approver History</relationshipLabel>
        <relationshipName>Approver_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Days__c</fullName>
        <label>Pending Days</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate</label>
        <referenceTo>eRebate__c</referenceTo>
        <relationshipLabel>Approver History</relationshipLabel>
        <relationshipName>Approver_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approver Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_ID__c</fullName>
        <label>Target Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Approver History</label>
    <nameField>
        <label>Approver History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approver History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>